jenkins/jenkins-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
spec:
  rules:
  - host: jenkins.512ks.cn
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins
          servicePort: 80
